--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 urls:
     - text: Home
       url: /
-   - text: About Me
-     url: /about
+  # - text: About Me
+  #  url: /about
     - text: Blog
       url: /blog
   #  - text: Gallery
