--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author_project_details:
                 visibility: false
 
 # social links
-twitter_username: null
+twitter_username: guel.jpg
 github_username:  sezeroo
 facebook_username: null
 linkedin_username: null
