--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: sezero Blog
 subtitle: 초보개발자 sezero Blog
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
+ Hi, I am sezero.
 
 url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
