--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author_bio: 초보개발자 sezero
 author_email: null
 author_location: korea
 author_website_url: null
-typewrite-text: 초보개발자입니다.
+typewrite-text: 응애 나 애기 코린이 
 
 # Experiences
 author_work_experiences:
