--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: sezero Blog
-subtitle: 초보개발자 sezero Blog
+subtitle: 응애 나 애기 코린이 sezero Blog
 description: >- # this means to ignore newlines until "baseurl:"
  Hi, I am sezero.
 
