--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author_bio: 초보개발자 sezero
 author_email: null
 author_location: korea
 author_website_url: null
-typewrite-text: 개발 잘하고 싶은 
+typewrite-text: 개발 잘하고 싶은 코린이
 
 # Experiences
 author_work_experiences:
