--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: sezero Blog
-subtitle: 코린이 sezero Blog
+subtitle:  sezero Blog
 description: >- # this means to ignore newlines until "baseurl:"
- 코린이입니다.
+ 나화안났어.
 
 url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -30,11 +30,11 @@ urls:
 
 author_logo: guel.jpg
 author: sezero
-author_bio: 초보개발자 sezero
+author_bio: sezero
 author_email: null
 author_location: korea
 author_website_url: null
-typewrite-text: 코린이
+typewrite-text: 냐옹
 
 # Experiences
 author_work_experiences:
