--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: sezero Blog
-subtitle:  sezero Blog
+subtitle:  나화안났어.
+
 description: >- # this means to ignore newlines until "baseurl:"
- 나화안났어.
 
 url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
